home name changed

--- a/me&family.html
+++ b/me&family.html
@@ -21,7 +21,7 @@
             <a href class="navbar-brand-logo">Me & family</a>
           </li>
           <li>
-            <a href="../HTML/me&family.html">home</a>
+            <a href="../HTML/me&family.html">Baarath</a>
           </li>
           <li>
             <a href="../HTML/ourstory.html">our story</a>
